# notes-api

./: .dockerignore  .env.example  Dockerfile  README.md  nohup.out  pyproject.toml  requirements.txt
.github/workflows/: jfrog-oidc-docker.yml
app/: crud.py  db.py  main.py  models.py  schemas.py
data/: notes.db
