[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notes-api"
version = "0.1.0"
description = "Simple FastAPI notes service with SQLite"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "You"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
]
